--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
   --background-color-L: #FFFFFF;
 }
 
+* {
+cursor: default;
+}
+
 body {
     background: var(--background-color-L);
     padding: 0;
